# Hackathon

./: .gitignore  Home.py  README.md  prediction_injury_logregression.ipynb  pyproject.toml  requirements.txt
Injuries_prediction_model/: helpers.py  main.py  model.py
Injuries_prediction_model/model/: train_columns.pkl
Injuries_prediction_model/services/: data_service.py  model_service.py
Prediction_model/: clean_data.py  evaluate_model.py  helpers.py  main.py  model.py
Prediction_model/services/: model_service.py
clustering_injury/: cluster_core.py
next_season_injury_prediction/: app_injury_logregression.py
next_season_injury_prediction/models/: features.json  injury_meta.json  injury_model.joblib
pages/: 1_Chatbot.py  1_chatbot.py  2_ Next Season Injury Predictor.py  3_Clustering Injuries.py  3_charts.py
pages/utils/: confusion.py  curves1d.py  feature_importance.py  heatmap.py  pr.py  roc.py
visualizations/script/: helpers.py
